ubiquity (1.11.7) UNRELEASED; urgency=low

  [ Mario Limonciello ]
  * bin/ubiquity-dm, debian/init: Fallback to noninteractive if automatic fails
    - If the X server fails to startup (due to issues with vesa, or automatic
      probing), don't fail the entire bootup.
    - Fall back to noninteractive in these cases rather than attempting to start
      gdm/kdm/etc.

  [ Colin Watson ]
  * Adjust the way we open the debug log so that sys.stderr doesn't end up
    being fd 4.
  * Stop taking account of progress bar cancellation in the implementation
    of the PROGRESS START and PROGRESS STOP commands; neither cdebconf nor
    debconf does so and thus confmodules don't expect it (LP: #313259).
  * Catch partman/exception_handler and partman/exception_handler_note from
    partman-commit as well as partman (LP: #324976).
  * Don't default to logical if an extended partition already exists, only
    if a real primary partition exists.
  * Update translations from Launchpad.

  [ Evan Dandrea ]
  * Replace the previous iteration of the timezone map (zoommap) with a new
    version (timezone_map) that should be easier to use, in accordance with the
    JauntyUbiquityUsability specification.
  * Use wrap_label, a replacement for GtkLabel from libview that does
    height-for-width text wrapping to work around bgo 101968.
  * Remove some unnecessary GtkAlignments.

 -- Mario Limonciello <mario_limonciello@dell.com>  Tue, 03 Feb 2009 16:31:27 -0600

ubiquity (1.11.6) jaunty; urgency=low

  [ Luke Yelavich ]
  * bin/ubiquity-dm: Fix accessibility breakage:
    - Check for the gconf accessibility flag in the user homedir, not /root
    - Instruct Orca to check for the gconf accessibility flag as the
      user and not root.

  [ Evan Dandrea ]
  * Automatic update of included source packages: base-installer
    1.98ubuntu1, choose-mirror 2.27ubuntu3, console-setup 1.28ubuntu5,
    partman-base 128ubuntu5, user-setup 1.23ubuntu9.
