@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.3.3 on Thu Aug 23 23:54:11 2007 -->
+<!--Generated with glade3 3.4.5 on Tue Feb 10 00:21:02 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="dummy_window">
     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
@@ -13,7 +13,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="xalign">0</property>
-            <property name="label" translatable="yes">&lt;big&gt;&lt;b&gt;Advanced Installation Type&lt;/b&gt;&lt;/big&gt;</property>
+            <property name="label" translatable="yes">&lt;big&gt;&lt;b&gt;Installation Type&lt;/b&gt;&lt;/big&gt;</property>
             <property name="use_markup">True</property>
             <property name="single_line_mode">True</property>
           </widget>
