@@ -1,10 +1,0 @@
-#!/bin/sh -e
-#Provides all mythbuntu questions asked by
-#ubiquity during install process
-# Written by Mario Limonciello <superm1@ubuntu.com>
-# Copyright (C) 2007 Mario Limonciello
-
-. /usr/share/debconf/confmodule
-
-# Determine if we are advanced
-db_input high mythbuntu/advanced_install || true
