@@ -6,6 +6,12 @@ ubiquity (1.11.7) UNRELEASED; urgency=low
       probing), don't fail the entire bootup.
     - Fall back to noninteractive in these cases rather than attempting to start
       gdm/kdm/etc.
+  * mythbuntu frontend: Remove all page skipping functionality.
+    - Realistically, it was a hack that only introduced race conditions on
+      fast hardware.
+    - Just ask all questions instead.  This will make it clearer which pages
+      will need to go since there is little utility in asking them in the first
+      place.
 
   [ Colin Watson ]
   * Adjust the way we open the debug log so that sys.stderr doesn't end up
